==> lizhiok/FPInterro/Libraries/MDK_LIB/RL/CAN/Drivers/CAN_LPC17xx.c <==
#include <RTL.h>                      /* RTX kernel functions & defines      */
#include <RTX_CAN.h>                  /* CAN Generic functions & defines     */
#include <LPC17xx.h>                  /* LPC17xx definitions                 */
#define PCLK             25000000

static CAN_ERROR CAN_hw_set_baudrate (U32 ctrl, U32 baudrate)  {
  LPC_CAN_TypeDef *pCAN = (ctrl == 1) ? LPC_CAN1 : LPC_CAN2;  /* CAN ctrl    */
  U32 result = 0;
  U32 nominal_time;

  /* Determine which nominal time to use for PCLK */
  if (((PCLK / 1000000) % 6) == 0) {
    nominal_time = 12;                   /* PCLK based on  72MHz CCLK */
  } else {
    nominal_time = 10;                   /* PCLK based on 100MHz CCLK */
  }

  /* Prepare value appropriate for bit time register                         */
  result  = (PCLK / nominal_time) / baudrate - 1;
  result &= 0x000003FF;
  result |= CAN_BIT_TIME[nominal_time];

  pCAN->BTR  = result;                           /* Set bit timing           */

  return CAN_OK;
}

CAN_ERROR CAN_hw_setup (U32 ctrl)  {
  switch (ctrl) {
    case 1: 
      #if USE_CAN_CTRL1 == 1
        LPC_SC->PCONP       |=  (1 << 13);    /* Enable power to CAN1 block  */
        LPC_PINCON->PINSEL0 |=  (1 <<  0);    /* Pin P0.0 used as RD1 (CAN1) */
        LPC_PINCON->PINSEL0 |=  (1 <<  2);    /* Pin P0.1 used as TD1 (CAN1) */
    
        NVIC_EnableIRQ(CAN_IRQn);             /* Enable CAN interrupt        */
      #endif
      break;
    case 2: 
      #if USE_CAN_CTRL2 == 1
        LPC_SC->PCONP       |=  (1 << 14);    /* Enable power to CAN2 block  */
        LPC_PINCON->PINSEL4 |=  (1 << 14);    /* Pin P2.7 used as RD2 (CAN2) */
        LPC_PINCON->PINSEL4 |=  (1 << 16);    /* Pin P2.8 used as TD2 (CAN2) */
    
        NVIC_EnableIRQ(CAN_IRQn);             /* Enable CAN interrupt        */
      #endif
      break;
    default:
      return CAN_UNEXIST_CTRL_ERROR;
  }

  return CAN_OK;
}

CAN_ERROR CAN_hw_init (U32 ctrl, U32 baudrate)  {
  LPC_CAN_TypeDef *pCAN = (ctrl == 1) ? LPC_CAN1 : LPC_CAN2;  /* CAN ctrl    */

  LPC_CANAF->AFMR = 2;                /* By default filter is not used       */
  pCAN->MOD       = 1;                /* Enter reset mode                    */
  pCAN->IER       = 0;                /* Disable all interrupts              */
  pCAN->GSR       = 0;                /* Clear status register               */
  CAN_hw_set_baudrate(ctrl, baudrate);/* Set bit timing                      */
  pCAN->IER       = 0x0003;           /* Enable Tx and Rx interrupt          */
      
  return CAN_OK;
}

CAN_ERROR CAN_hw_start (U32 ctrl)  {
  LPC_CAN_TypeDef *pCAN = (ctrl == 1) ? LPC_CAN1 : LPC_CAN2;  /* CAN ctrl    */

  pCAN->MOD = 0;                      /* Enter normal operating mode         */

  return CAN_OK;
}

CAN_ERROR CAN_hw_wr (U32 ctrl, CAN_msg *msg)  {
  LPC_CAN_TypeDef *pCAN = (ctrl == 1) ? LPC_CAN1 : LPC_CAN2;  /* CAN ctrl    */
  U32 CANData;

  CANData       = (((U32) msg->len) << 16)          & 0x000F0000 | 
                  (msg->format == EXTENDED_FORMAT ) * 0x80000000 |
                  (msg->type   == REMOTE_FRAME)     * 0x40000000;

  if (pCAN->SR & 0x00000004)  {       /* Transmit buffer 1 free              */
    pCAN->TFI1  = CANData;            /* Write frame informations            */
    pCAN->TID1 = msg->id;             /* Write CAN message identifier        */
    pCAN->TDA1 = *(U32 *) &msg->data[0];      /* Write first 4 data bytes    */
    pCAN->TDB1 = *(U32 *) &msg->data[4];      /* Write second 4 data bytes   */
    //pCAN->CMR  = 0x31;              /* Select Tx1 for Self Tx/Rx           */
    pCAN->CMR  = 0x21;                /* Start transmission without loop-back*/
  }
  else
    return CAN_TX_BUSY_ERROR;

  return CAN_OK;
}

static void CAN_hw_rd (U32 ctrl, CAN_msg *msg)  {
  LPC_CAN_TypeDef *pCAN = (ctrl == 1) ? LPC_CAN1 : LPC_CAN2;  /* CAN ctrl    */
  U32 CANData;
  U32 *CANAddr;

  /* Read frame informations                                                 */
  CANData = pCAN->RFS;
  msg->format   = (CANData & 0x80000000) == 0x80000000;
  msg->type     = (CANData & 0x40000000) == 0x40000000;
  msg->len      = ((U8)(CANData >> 16)) & 0x0F;

  /* Read CAN message identifier                                             */
  msg->id = pCAN->RID;

  /* Read the data if received message was DATA FRAME                        */
  if (msg->type == DATA_FRAME)  {     

    /* Read first 4 data bytes                                               */
    CANAddr = (U32 *) &msg->data[0];
    *CANAddr++ = pCAN->RDA;

    /* Read second 4 data bytes                                              */
    *CANAddr   = pCAN->RDB;
  }
}

CAN_ERROR CAN_hw_rx_object (U32 ctrl, U32 ch, U32 id, U32 object_para)  {
  static S16 CAN_std_cnt = 0;
  static S16 CAN_ext_cnt = 0;
         U32 buf0, buf1;
         S16 cnt1, cnt2, bound1;

  /* Acceptance Filter Memory full                                           */
  if ((((CAN_std_cnt + 1) >> 1) + CAN_ext_cnt) >= 512)
    return CAN_OBJECTS_FULL_ERROR;

  /* Setup Acceptance Filter Configuration                                   
     Acceptance Filter Mode Register = Off                                   */
  LPC_CANAF->AFMR = 0x00000001;

  if ((object_para & FORMAT_TYPE) == STANDARD_TYPE)  { /* Add mask for std id*/
    id |= (ctrl-1) << 13;             /* Add controller number               */
    id &= 0x0000F7FF;                 /* Mask out 16-bits of ID              */

    /* Move all remaining extended mask entries one place up                 
       if new entry will increase standard ID filters list                   */
    if ((CAN_std_cnt & 0x0001) == 0 && CAN_ext_cnt != 0) {
      cnt1   = (CAN_std_cnt >> 1);
      bound1 = CAN_ext_cnt;
      buf0   = LPC_CANAF_RAM->mask[cnt1];
      while (bound1--)  {
        cnt1++;
        buf1 = LPC_CANAF_RAM->mask[cnt1];
        LPC_CANAF_RAM->mask[cnt1] = buf0;
        buf0 = buf1;
      }        
    }

    if (CAN_std_cnt == 0)  {          /* For entering first  ID              */
      LPC_CANAF_RAM->mask[0] = 0x0000FFFF | (id << 16);
    }  else if (CAN_std_cnt == 1)  {  /* For entering second ID              */
      if ((LPC_CANAF_RAM->mask[0] >> 16) > id)
        LPC_CANAF_RAM->mask[0] = (LPC_CANAF_RAM->mask[0] >> 16) | (id << 16);
      else
        LPC_CANAF_RAM->mask[0] = (LPC_CANAF_RAM->mask[0] & 0xFFFF0000) | id;
    }  else  {
      /* Find where to insert new ID                                         */
      cnt1 = 0;
      cnt2 = CAN_std_cnt;
      bound1 = (CAN_std_cnt - 1) >> 1;
      while (cnt1 <= bound1)  {       /* Loop through standard existing IDs  */
        if ((LPC_CANAF_RAM->mask[cnt1] >> 16) > id)  {
          cnt2 = cnt1 * 2;
          break;
        }
        if ((LPC_CANAF_RAM->mask[cnt1] & 0x0000FFFF) > id)  {
          cnt2 = cnt1 * 2 + 1;
          break;
        }
        cnt1++;                       /* cnt1 = U32 where to insert new ID   */
      }                               /* cnt2 = U16 where to insert new ID   */

      if (cnt1 > bound1)  {           /* Adding ID as last entry             */
        if ((CAN_std_cnt & 0x0001) == 0)/* Even number of IDs exists         */
          LPC_CANAF_RAM->mask[cnt1]  = 0x0000FFFF | (id << 16);
        else                              /* Odd  number of IDs exists       */
          LPC_CANAF_RAM->mask[cnt1]  = (LPC_CANAF_RAM->mask[cnt1] & 0xFFFF0000) | id;
      }  else  {
        buf0 = LPC_CANAF_RAM->mask[cnt1];/* Remember current entry           */
        if ((cnt2 & 0x0001) == 0)     /* Insert new mask to even address     */
          buf1 = (id << 16) | (buf0 >> 16);
        else                          /* Insert new mask to odd  address     */
          buf1 = (buf0 & 0xFFFF0000) | id;
     
        LPC_CANAF_RAM->mask[cnt1] = buf1;/* Insert mask                      */

        bound1 = CAN_std_cnt >> 1;
        /* Move all remaining standard mask entries one place up             */
        while (cnt1 < bound1)  {
          cnt1++;
          buf1  = LPC_CANAF_RAM->mask[cnt1];
          LPC_CANAF_RAM->mask[cnt1] = (buf1 >> 16) | (buf0 << 16);
          buf0  = buf1;
        }

        if ((CAN_std_cnt & 0x0001) == 0)/* Even number of IDs exists         */
          LPC_CANAF_RAM->mask[cnt1] = (LPC_CANAF_RAM->mask[cnt1] & 0xFFFF0000) | (0x0000FFFF);
      }
    }
    CAN_std_cnt++;
  }  else  {                          /* Add mask for extended identifiers   */
    id |= (ctrl-1) << 29;             /* Add controller number               */

    cnt1 = ((CAN_std_cnt + 1) >> 1);
    cnt2 = 0;
    while (cnt2 < CAN_ext_cnt)  {     /* Loop through extended existing masks*/
      if (LPC_CANAF_RAM->mask[cnt1] > id)
        break;
      cnt1++;                         /* cnt1 = U32 where to insert new mask */
      cnt2++;
    }

    buf0 = LPC_CANAF_RAM->mask[cnt1];  /* Remember current entry             */
    LPC_CANAF_RAM->mask[cnt1] = id;    /* Insert mask                        */

    CAN_ext_cnt++;

    bound1 = CAN_ext_cnt - 1;
    /* Move all remaining extended mask entries one place up                 */
    while (cnt2 < bound1)  {
      cnt1++;
      cnt2++;
      buf1 = LPC_CANAF_RAM->mask[cnt1];
      LPC_CANAF_RAM->mask[cnt1] = buf0;
      buf0 = buf1;
    }        
  }
  
  /* Calculate std ID start address (buf0) and ext ID start address (buf1)   */
  buf0 = ((CAN_std_cnt + 1) >> 1) << 2;
  buf1 = buf0 + (CAN_ext_cnt << 2);

  /* Setup acceptance filter pointers                                        */
  LPC_CANAF->SFF_sa     = 0;
  LPC_CANAF->SFF_GRP_sa = buf0;
  LPC_CANAF->EFF_sa     = buf0;
  LPC_CANAF->EFF_GRP_sa = buf1;
  LPC_CANAF->ENDofTable = buf1;

  LPC_CANAF->AFMR = 0x00000000;   /* Use acceptance filter               */

  return CAN_OK;
}
